# Box2D_Editor

./: .gitignore  .gitmodules  Box2D_Editor.sln  Box2D_Editor.vcxproj  Box2D_Editor.vcxproj.filters  Box2D_Test.sln  Box2D_Test.vcxproj  Box2D_Test.vcxproj.filters  CMakeLists.txt  SHORTCUTS.txt  application.cpp  application.h  checkbox_widget.cpp  compvector.cpp  compvector.h  container_widget.cpp  copy-assets.cmake  create_panel.cpp  create_panel.h  desat.frag  edit_window.cpp  edit_window.h  editwindow.cpp  editwindow.h  gameobject.cpp  gameobject.h  global.cpp  global.h  history.cpp  history.h  level.txt  logger.cpp  logger.h  main.cpp  objectlist.cpp  objectlist.h  polygon.cpp  polygon.h  rectangle_widget.cpp  scenes.h  (+27 more)
.clinerules/: project.md
include/: application.h  compvector.h  editor.h  gameobject.h  global.h  history.h  logger.h  main.h  objectlist.h  scenes.h  searchindex.h  simulation.h  test.h  tools.h  utils.h
include/UI/: create_panel.h  edit_window.h  toolbox.h
include/common/: compvector.h  data_pointer.h  data_pointer_common.h  data_pointer_shared.h  data_pointer_unique.h  event.h  filedialog.h  history.h  logger.h  searchindex.h  utils.h
include/editor/: editor.h  scenes.h  serializer.h  tools.h
include/editor/UI/: create_panel.h  edit_window.h  menu.h  outliner.h  toolbox.h
include/editor/simulation/: gameobject.h  joint.h  objectlist.h
include/simulation/: gameobject.h  gameobject_transform.h  joint.h  objectlist.h  polygon.h  shapes.h  simulation.h
include/test_lib/example/: test_list_3.h  test_module_1.h  test_module_2.h
include/tests/: compvector_tests.h  data_pointer_shared_tests.h  data_pointer_tests.h  data_pointer_unique_tests.h  editor_tests.h  event_tests.h  logger_tests.h  searchindex_tests.h  simulation_tests.h  test.h  tests.h  widget_tests.h
include/tests/example/: test_list_3.h  test_module_1.h  test_module_2.h
include/tests/widget_tests/: widget_test.h  widget_tests.h  widget_tests_application.h  widget_tests_basic.h  widget_tests_button.h  widget_tests_canvas.h  widget_tests_checkbox.h  widget_tests_container.h  widget_tests_dropdown.h  widget_tests_pending.h  (+10 more)
include/widgets/: application.h  button_widget.h  canvas_widget.h  checkbox_widget.h  container_widget.h  drawing.h  dropdown_widget.h  empty_widget.h  font.h  polygon_widget.h  rectangle_widget.h  render_texture.h  scroll_area_widget.h  shape_widget.h  text_widget.h  textbox_widget.h  tree_view_entry.h  tree_view_entry_widget.h  tree_view_widget.h  widget.h  widget_link.h  widget_list.h  widget_parent_chain.h  widget_render_queue.h  widget_transform.h  widget_unclipped_region.h  widget_update_queue.h  widgets.h  widgets_common.h  window_widget.h
levels/: box_pyramid.txt  car_track.txt  level.txt  level2.txt  polygon.txt
levels_backup/: level.txt
shaders/: combined_template.frag  desat.frag  premultiply.frag  selection.frag
src/: CMakeLists.txt  application.cpp  compvector.cpp  editor.cpp  gameobject.cpp  global.cpp  history.cpp  logger.cpp  main.cpp  objectlist.cpp  polygon.cpp  searchindex.cpp  serializer.cpp  simulation.cpp  test.cpp  tools.cpp  utils.cpp
src/UI/: CMakeLists.txt  create_panel.cpp  edit_window.cpp  toolbox.cpp
src/common/: CMakeLists.txt  data_pointer.cpp  data_pointer_common.cpp  data_pointer_shared.cpp  data_pointer_unique.cpp  filedialog.cpp  logger.cpp  utils.cpp
src/editor/: CMakeLists.txt  editor.cpp  serializer.cpp  tools.cpp
src/editor/UI/: create_panel.cpp  edit_window.cpp  menu.cpp  outliner.cpp  toolbox.cpp
src/editor/simulation/: gameobject.cpp  gameobject_transform.cpp  joint.cpp  objectlist.cpp  polygon.cpp  shapes.cpp  simulation.cpp
src/simulation/: CMakeLists.txt  gameobject.cpp  gameobject_transform.cpp  joint.cpp  objectlist.cpp  polygon.cpp  serializer.cpp  shapes.cpp  simulation.cpp
src/test_lib/: CMakeLists.txt  main.cpp  test.cpp
src/test_lib/example/: test_list_3.cpp  test_module_1.cpp  test_module_2.cpp
src/tests/: CMakeLists.txt  compvector_tests.cpp  data_pointer_tests.cpp  editor_tests.cpp  event_tests.cpp  logger_tests.cpp  main.cpp  searchindex_tests.cpp  simulation_tests.cpp  test.cpp  widget_tests.cpp  widget_tests_application.cpp  widget_tests_canvas.cpp  widget_tests_checkbox.cpp  widget_tests_dropdown.cpp  widget_tests_scroll_area.cpp  widget_tests_size_policy.cpp  widget_tests_text.cpp  widget_tests_textbox.cpp  widget_tests_tree_view.cpp  widget_tests_window.cpp
src/tests/common_tests/: CMakeLists.txt  compvector_tests.cpp  data_pointer_shared_tests.cpp  data_pointer_tests.cpp  data_pointer_unique_tests.cpp  event_tests.cpp  logger_tests.cpp  searchindex_tests.cpp  simulation_tests.cpp
src/tests/editor_tests/: CMakeLists.txt  editor_tests.cpp
src/tests/example/: main.cpp  test_list_3.cpp  test_module_1.cpp  test_module_2.cpp
src/tests/widget_tests/: CMakeLists.txt  widget_test.cpp  widget_tests.cpp  widget_tests_application.cpp  widget_tests_basic.cpp  widget_tests_button.cpp  widget_tests_canvas.cpp  widget_tests_checkbox.cpp  widget_tests_container.cpp  widget_tests_dropdown.cpp  widget_tests_pending.cpp  widget_tests_post_actions.cpp  widget_tests_render.cpp  widget_tests_scroll_area.cpp  widget_tests_size_policy.cpp  widget_tests_text.cpp  widget_tests_textbox.cpp  widget_tests_toposort.cpp  widget_tests_tree_view.cpp  widget_tests_widget_link.cpp  widget_tests_window.cpp
src/widgets/: CMakeLists.txt  application.cpp  button_widget.cpp  canvas_widget.cpp  checkbox_widget.cpp  container_widget.cpp  drawing.cpp  dropdown_widget.cpp  empty_widget.cpp  font.cpp  polygon_widget.cpp  rectangle_widget.cpp  render_texture.cpp  scroll_area_widget.cpp  shape_widget.cpp  text_widget.cpp  textbox_widget.cpp  tree_view_entry.cpp  tree_view_entry_widget.cpp  tree_view_widget.cpp  widget.cpp  widget_link.cpp  widget_list.cpp  widget_parent_chain.cpp  widget_render_queue.cpp  widget_transform.cpp  widget_unclipped_region.cpp  widget_update_queue.cpp  widgets_common.cpp  window_widget.cpp
test_lib/: CMakeLists.txt
test_lib/src/: test.cpp
tests/: box_stack.txt  moving_car.txt
(+9 files in other folders)
