cmake_minimum_required(VERSION 3.10)
project(Box2D_Editor LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 20)

set(BOX2D_BUILD_UNIT_TESTS OFF CACHE INTERNAL "" FORCE)
set(BOX2D_BUILD_TESTBED OFF CACHE INTERNAL "" FORCE)
set(BOX2D_BUILD_DOCS OFF CACHE INTERNAL "" FORCE)
set(BOX2D_USER_SETTINGS OFF CACHE INTERNAL "" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "" FORCE)
set(CMAKE_BUILD_TYPE Release CACHE INTERNAL "" FORCE)
set(SFML_BUILD_AUDIO ON CACHE INTERNAL "" FORCE)
set(SFML_BUILD_DOC OFF CACHE INTERNAL "" FORCE)
set(SFML_BUILD_EXAMPLES OFF CACHE INTERNAL "" FORCE)
set(SFML_BUILD_GRAPHICS ON CACHE INTERNAL "" FORCE)
set(SFML_BUILD_NETWORK ON CACHE INTERNAL "" FORCE)
set(SFML_BUILD_TEST_SUITE OFF CACHE INTERNAL "" FORCE)
set(SFML_BUILD_WINDOW ON CACHE INTERNAL "" FORCE)
set(SFML_GENERATE_PDB ON CACHE INTERNAL "" FORCE)
set(SFML_INSTALL_PKGCONFIG_FILES OFF CACHE INTERNAL "" FORCE)
set(SFML_OPENGL_ES OFF CACHE INTERNAL "" FORCE)
set(SFML_USE_STATIC_STD_LIBS OFF CACHE INTERNAL "" FORCE)
set(SFML_USE_SYSTEM_DEPS OFF CACHE INTERNAL "" FORCE)
set(WARNINGS_AS_ERRORS OFF CACHE INTERNAL "" FORCE)

add_subdirectory(sfml)
add_subdirectory(box2d)
add_subdirectory(src)
add_executable(Box2D_Editor src/main.cpp)

target_link_libraries(Box2D_Editor PUBLIC src_lib)

set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Box2D_Editor)

add_custom_target(copy_assets
    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_LIST_DIR}/copy-assets.cmake
    SOURCES copy-assets.cmake
)
add_dependencies(Box2D_Editor copy_assets)
