cmake_minimum_required(VERSION 3.10)
project(Box2D_Editor LANGUAGES CXX)

set (CMAKE_CXX_STANDARD 20)

option(B2E_WARNINGS_AS_ERRORS "Compile warnings as errors" ON)
set(CMAKE_COMPILE_WARNING_AS_ERROR ${B2E_WARNINGS_AS_ERRORS})

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)

set(SFML_BUILD_AUDIO ON CACHE BOOL "" FORCE)
set(SFML_BUILD_DOC OFF CACHE BOOL "" FORCE)
set(SFML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(SFML_BUILD_GRAPHICS ON CACHE BOOL "" FORCE)
set(SFML_BUILD_NETWORK ON CACHE BOOL "" FORCE)
set(SFML_BUILD_TEST_SUITE OFF CACHE BOOL "" FORCE)
set(SFML_BUILD_WINDOW ON CACHE BOOL "" FORCE)
set(SFML_GENERATE_PDB ON CACHE BOOL "" FORCE)
set(SFML_INSTALL_PKGCONFIG_FILES OFF CACHE BOOL "" FORCE)
set(SFML_OPENGL_ES OFF CACHE BOOL "" FORCE)
set(SFML_USE_STATIC_STD_LIBS OFF CACHE BOOL "" FORCE)
set(SFML_USE_SYSTEM_DEPS OFF CACHE BOOL "" FORCE)
set(WARNINGS_AS_ERRORS OFF CACHE BOOL "" FORCE)
add_subdirectory(SFML)
target_compile_options(sfml-graphics PRIVATE -w)
target_compile_options(sfml-system PRIVATE -w)
target_compile_options(sfml-window PRIVATE -w)

set(BOX2D_BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)
set(BOX2D_BUILD_TESTBED OFF CACHE BOOL "" FORCE)
set(BOX2D_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(BOX2D_USER_SETTINGS OFF CACHE BOOL "" FORCE)
add_subdirectory(box2d)
target_compile_options(box2d PRIVATE -w)

set(CLIP_ENABLE_IMAGE OFF CACHE BOOL "" FORCE)
set(CLIP_EXAMPLES OFF CACHE BOOL "" FORCE)
set(CLIP_SUPPORT_WINXP OFF CACHE BOOL "" FORCE)
set(CLIP_TESTS OFF CACHE BOOL "" FORCE)
set(CMAKE_WARN_DEPRECATED OFF CACHE BOOL "" FORCE)
add_subdirectory(clip)
target_compile_options(clip PRIVATE -w)

add_subdirectory(test_lib)

set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
add_subdirectory(src/common)
add_subdirectory(src/editor)
add_subdirectory(src/simulation)
add_subdirectory(src/tests)
add_subdirectory(src/widgets)
add_executable(Box2D_Editor src/main.cpp)

target_link_libraries(Box2D_Editor PUBLIC common_lib)
target_link_libraries(Box2D_Editor PUBLIC editor)

set_property(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}" PROPERTY VS_STARTUP_PROJECT Box2D_Editor)
set_property(TARGET Box2D_Editor PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")

install(TARGETS Box2D_Editor RUNTIME DESTINATION bin)
install(DIRECTORY fonts DESTINATION bin)
install(DIRECTORY levels DESTINATION bin)
install(DIRECTORY shaders DESTINATION bin)
install(FILES SHORTCUTS.txt DESTINATION bin)
